[package]
name = "battleships"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
dashmap = "6.1.0"
maud = { version = "0.27.0", features = ["axum"] }
pico-args = "0.5.0"
rand = "0.9.2"
rust-embed = { version = "8.7.2", features = ["axum", "mime-guess", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
shrinkwraprs = "0.3.0"
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["tokio"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["compression-br"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["rng-rand", "v7"] }
